# coralnpu

./: .bazelrc  .ci.yml  .clang-format  .gitignore  .markdown_style.rb  .mdlrc  .rules.verible_lint  .scalafmt  .shellcheckrc  .style.yapf  CONTRIBUTING.md  MODULE.bazel  PREUPLOAD.cfg  README.md  WORKSPACE
.githooks/: pre-push
.github/workflows/: Dockerfile.runner  main.yml  sim-verilator.yml
coralnpu_test_utils/: TileLinkULInterface.py  TlulVerificationEnv.py  axi_slave.py  backdoor.py  core_mini_axi_interface.py  core_mini_axi_pyocd_gdbserver.py  ftdi_spi_master.py  run_binary.py  run_matmul_test.py  run_sram_test.py  rvv_cpp_util_header_generator.py  rvv_type_util.py  sim_test_fixture.py  spi_constants.py  spi_master.py
examples/: BUILD.bazel
fpga/: BUILD  check_pins.py  chip_verilator.core  coralnpu_soc.core
fpga/sw/: flash_tool_ftdi.py  flash_tool_lib.py  flash_tool_sim_test.py  flash_tool_test.py
fpga/sw/rom_boot/: make_flash_image.py  rom_boot_sim_test.py
hdl/verilog/: ClockGate.sv  Sram.v
hw_sim/: BUILD
lib/: BUILD
rules/: BUILD  chisel.bzl  coco_tb.bzl  coralnpu_v2.bzl  deps.bzl  extensions.bzl  repos.bzl  sim_runner.py  test_defs.bzl  utils.bzl  uvm_batch_runner.py  verilator.bzl  verilator_defs.bzl
sw/coralnpu_sim/: coralnpu_v2_sim_test.py  coralnpu_v2_sim_utils.py
sw/utils/: metrics.py
tests/cocotb/: BUILD  README.md  core_mini_axi_debug.py  core_mini_axi_sim.py  dump_gemma_tensors.py  fcsr_frm_hazard_test.cc  nop_test.py  rvv_arithmetic_cocotb_test.py  rvv_assembly_cocotb_test.py  rvv_frm_hazard_test.cc  rvv_highmem_sim.py  rvv_itcm512kb_dtcm512kb_sim.py  rvv_load_store_test.py  rvv_ml_ops_cocotb_test.py  software_interrupt_test.cc  stress_test.cc  timer_interrupt_test.cc  zfbfmin_test.py  zvfbf_test.py
tests/cocotb/coralnpu_isa/: BUILD
tests/cocotb/csr_test/: BUILD  csr_test_bench.py
tests/cocotb/exceptions/: BUILD
tests/cocotb/freertos_app/: BUILD
tests/cocotb/rvv/: BUILD
tests/cocotb/tlul/: axi2tlul_cocotb_test.py  coralnpu_xbar_test.py  test_dma_integration.py  test_freertos.py  test_gpio_integration.py  test_spi_master.py  test_subsystem.py  test_tlul_fifo_async.py  test_tlul_fifo_sync.py  test_tlul_integrity.py  test_tlul_socket_1n.py  test_tlul_socket_m1.py  test_tlul_to_sram.py  tlul2axi_cocotb_test.py
tests/npusim_examples/: BUILD  npusim_run_mobilenet.py
tests/uvm/: BUILD  Makefile
tests/verilator_sim/: BUILD
toolchain/: cc_toolchain_config.bzl
toolchain/build_scripts/: README.md  coralnpu_v2_toolchain_build.sh  toolchain_rockylinux_image.dockerfile
toolchain/crt/: coralnpu_gloss.cc
toolchain/wrappers/: driver.sh  gdb
utils/: BUILD  batch_list_process.py  check_macro_signatures.py  compare_uvm_results.py  coralnpu.dockerfile  generate_airgap_tarball.sh  run_linters.sh  run_linters_test.sh  run_uvm_regression.py  run_uvm_regression_test.py  scm_info.py  update_all_cocotb_tests.py  update_cocotb_tests.py  uvm_batch_runner.py
utils/coralnpu_soc_loader/: loader.py  run_simulation.py  sim_test_runner.py  spi_driver.py
(+49 files in other folders)
