module(
    name = "coralnpu_hw",
    version = "0.0.1",
)

# Core rules
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_scala", version = "7.2.6", repo_name = "io_bazel_rules_scala")
bazel_dep(name = "rules_hdl", version = "0.0.1")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_java", version = "7.10.0")
bazel_dep(name = "rules_pkg", version = "0.10.1")

# Core libraries
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "com_google_absl")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")

# Configure Scala version
scala_config = use_extension("@io_bazel_rules_scala//scala/extensions:config.bzl", "scala_config")
scala_config.settings(
    scala_version = "2.13.18",
)

# Load Scala dependencies
scala_deps = use_extension("@io_bazel_rules_scala//scala/extensions:deps.bzl", "scala_deps")
scala_deps.scala()

# Configure Maven dependencies for Chisel
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "coralnpu_maven",
    artifacts = [
        "org.scala-lang:scala-reflect:2.13.18",
        "com.thoughtworks.paranamer:paranamer:2.8",
        "org.json4s:json4s-ast_2.13:4.0.6",
        "org.json4s:json4s-scalap_2.13:4.0.6",
        "org.json4s:json4s-core_2.13:4.0.6",
        "org.json4s:json4s-native_2.13:4.0.6",
        "org.apache.commons:commons-lang3:3.11",
        "org.apache.commons:commons-text:1.10.0",
        "com.github.scopt:scopt_2.13:3.7.1",
        "net.jcazevedo:moultingyaml_2.13:0.4.2",
        "io.github.alexarchambault:data-class_2.13:0.2.5",
        "com.lihaoyi:os-lib_2.13:0.8.1",
        "com.lihaoyi:geny_2.13:0.7.1",
        "com.lihaoyi:upickle_2.13:2.0.0",
        "org.chipsalliance:chisel_2.13:7.0.0-RC1",
        "org.chipsalliance:chisel-plugin_2.13.6:7.0.0-RC1",
        "org.chipsalliance:firtool-resolver_2.13:2.0.0",
        "com.outr:moduload_2.13:1.1.7",
        "com.outr:scribe_2.13:3.15.2",
        "edu.berkeley.cs:firrtl_2.13:5.0.0",
        "org.scalatest:scalatest_2.13:3.2.16",
        "org.antlr:antlr4-runtime:4.13.1",
        "net.java.dev.jna:jna:5.14.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//third_party:maven_install.json",
)
use_repo(maven, "coralnpu_maven")

# Local extension for legacy non-module dependencies
coralnpu_deps_ext = use_extension("//rules:extensions.bzl", "coralnpu_deps_ext")
use_repo(
    coralnpu_deps_ext,
    "coralnpu_host_cpus",
    "llvm_firtool",
    "accellera_systemc",
    "riscv_isa_sim",
    "common_cells",
    "cvfpu",
    "fpu_div_sqrt_mvp",
    "RVVI",
    "chipsalliance_rocket_chip",
    "chipsalliance_diplomacy",
)

# Import verilator from rules_hdl
rules_hdl_deps = use_extension("@rules_hdl//:extensions.bzl", "rules_hdl_deps")
use_repo(rules_hdl_deps, "verilator")

